--- a/data/stories.yml
+++ b/data/stories.yml
@@ -1,2 +1,11 @@
 version: "2.0"
+stories:
+- story: Saudacao
+  steps:
+  - intent: greet
+  - action: utter_greet
 
+- story: tchau
+  steps:
+  - intent: goodbye
+  - action: utter_goodbye
