--- a/projects/Nome_Chatbot_1/data/stories.yml
+++ b/projects/Nome_Chatbot_1/data/stories.yml
@@ -1,2 +1,7 @@
 version: "2.0"
 stories:
+- story: bot 1
+  steps:
+  - intent: iniciar_bot1
+  - action: utter_iniciar_bot1
+  - action: utter_return
