--- a/projects/Nome_Chatbot_2/data/stories.yml
+++ b/projects/Nome_Chatbot_2/data/stories.yml
@@ -1,3 +1,8 @@
 version: "2.0"
 
 stories:
+- story: bot 2
+  steps:
+  - intent: iniciar_bot2
+  - action: utter_iniciar_bot2
+  - action: utter_return
