chore: atualizar versao do bot para 3.0

--- a/domain.yml
+++ b/domain.yml
@@ -1,7 +1,9 @@
-version: '2.0'
+version: "3.0"
+
 session_config:
   session_expiration_time: 60
   carry_over_slots_to_new_session: true
+
 intents:
 - greet
 - goodbye
@@ -26,7 +28,6 @@ responses:
     - title: Chatbot 2
       payload: /iniciar_bot2
 
-  
   utter_fallback:
   - text: Desculpe não entendi, Qual chatbot você deseja testar?
     buttons:
